package com.gnu.gnucash.entries;

public enum EntryType {
	Credit,
	Debit
}
